# neuton-nordic-thingy53-ble-remotecontrol

./: .gitignore  CMakeLists.txt  README.md  README.rst  prj.conf
demo/: README.md  install_demo_win.bat  requirements.txt  run_demo_win.bat  uiapp_ble.py
demo/assets/: Background.pxd  DoubleShake.pxd  DoubleThumb.pxd  Idle.pxd  RotationLeft.pxd  RotationRight.pxd  SwipeLeft.pxd  SwipeRight.pxd  Unknown.pxd
src/: app_version.h  inference_postprocessing.c  inference_postprocessing.h  main.c
src/ble/gatt/: ble_gatt.c  ble_gatt.h
src/ble/hid/: ble_hid.c
src/neuton-ai/: README.md
src/neuton-ai/neuton/include/neuton/: neuton.h  neuton_types.h  neuton_version.h
src/neuton-ai/neuton/include/neuton/common/: neuton_debug.h  neuton_platform.h
src/neuton-ai/neuton/include/neuton/dsp/: neuton_dsp.h  neuton_dsp_fast_math.h  neuton_dsp_spectral.h  neuton_dsp_statistic.h  neuton_dsp_transform.h  neuton_dsp_types.h
src/neuton-ai/neuton/include/neuton/nn/: neuton_nn_dsp_pipeline_types.h  neuton_nn_input_types.h  neuton_nn_model_types.h  neuton_nn_output_types.h  neuton_nn_types.h
src/neuton-ai/neuton/include/neuton/private/: neuton_c_intrinsics.h  neuton_defs.h  neuton_mem.h
src/neuton-ai/neuton/include/neuton/utils/: neuton_ordered_window.h  neuton_osl_window.h
src/neuton-ai/neuton_generated/: CMakeLists.txt  neuton_user_config.h  neuton_user_data_prep_config.h  neuton_user_data_prep_meta.inc  neuton_user_model.c  neuton_user_model.h  neuton_user_model.inc  neuton_user_model_config.h  neuton_user_model_types.h  neuton_user_types.h
(+67 files in other folders)
